--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.16",
     "axios": "^1.3.4",
     "framer-motion": "^10.2.3",
     "react": "^18.2.0",
