--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "react-hot-toast": "^2.4.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.8.2",
+    "react-tooltip": "^5.10.1",
     "sass": "^1.58.3"
   },
   "devDependencies": {
