--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js"
+    "start": "node index.js"
   },
   "author": "",
   "license": "ISC",
@@ -22,6 +22,7 @@
   },
   "devDependencies": {
     "postcss": "^8.4.21",
-    "prettier-plugin-css-order": "^1.3.0"
+    "prettier-plugin-css-order": "^1.3.0",
+    "vercel": "^28.18.4"
   }
 }
